# visual_odometry

./: .gitignore  README.md  test.txt
error_publisher/: CMakeLists.txt  mainpage.dox  manifest.xml
error_publisher/msg/: tf_error.msg  total_error.msg
error_publisher/src/: main.cpp
feature_cv_waitinglist/: CMakeLists.txt  mainpage.dox  manifest.xml
feature_cv_waitinglist/cfg/: FeatureConfig.cfg
feature_cv_waitinglist/include/feature_cv_waitinglist/: feature_matching.h  homography_estimation.h  sift_gpu_wrapper.h
feature_cv_waitinglist/src/: feature_matching.cpp  homography_estimation.cpp  sift_gpu_wrapper.cpp
harris_waitinglist/: CMakeLists.txt  harris_corners.launch  mainpage.dox  manifest.xml
harris_waitinglist/cfg/: Harris.cfg
harris_waitinglist/src/: harris_corners.cpp
homography_waitinglist/: CMakeLists.txt  mainpage.dox  manifest.xml
homography_waitinglist/include/homography_waitinglist/: homography_estimation.h
homography_waitinglist/src/: homography_estimation.cpp  main.cpp
imagepub_waitinglist/: CMakeLists.txt  imagepub_waitinglist.launch  mainpage.dox  manifest.xml
imagepub_waitinglist/cfg/: ImageChangerConfig.cfg
imagepub_waitinglist/src/: cb_publisher.cpp  file_publisher.cpp  image_changer.cpp
matches_testbed/: CMakeLists.txt  mainpage.dox  manifest.xml
matches_testbed/launch/: testbed.launch
matches_testbed/src/: testbed.cpp  util.cpp
ompl_car/: CMakeLists.txt  mainpage.dox  manifest.xml
ompl_car/src/: dynamic_car.cpp
pluginlib_harris/: CMakeLists.txt  harris_nodelet.launch  harris_plugins.xml  mainpage.dox  manifest.xml  nodelet_plugins.xml
pluginlib_harris/include/pluginlib_harris/: HarrisNodelet.h  harris_base.h  harris_plugins.h
pluginlib_harris/src/: HarrisNodelet.cpp  harris_loader.cpp  harris_plugins.cpp
ransac_waitinglist/: CMakeLists.txt  mainpage.dox  manifest.xml
ransac_waitinglist/cfg/: RANSACConfig.cfg
ransac_waitinglist/include/ransac_waitinglist/: ransac_transformation.h
ransac_waitinglist/src/: ransac_transformation.cpp
rgbd_vo_waitinglist/: CMakeLists.txt  mainpage.dox  manifest.xml
rgbd_vo_waitinglist/include/rgbd_vo_waitinglist/: rgbd_odometry.h
rgbd_vo_waitinglist/launch/: octomap.launch  octomap_only.launch  rgbd.launch
rgbd_vo_waitinglist/src/: main.cpp  rgbd_odometry.cpp  util.cpp
rviz_markers_waitinglist/: CMakeLists.txt  logo.dae  mainpage.dox  manifest.xml
rviz_markers_waitinglist/src/: rviz_chair_logo.cpp  rviz_clock.cpp
stereo_vo_waitinglist/: CMakeLists.txt  mainpage.dox  manifest.xml
stereo_vo_waitinglist/include/stereo_vo_waitinglist/: visual_odometry.h
stereo_vo_waitinglist/launch/: bag_videre.launch  stereo.launch  videre.launch
stereo_vo_waitinglist/src/: main.cpp  visual_odometry.cpp
